# CofoneListaSpesa

./: CMakeLists.txt  IObserver.h  ISubject.h  Item.cpp  Item.h  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  main.cpp
Google_tests/: CMakeLists.txt  ItemTest.cpp  ShoppingListTest.cpp  UserTest.cpp  test1.cpp
Google_tests/lib/: CMakeLists.txt
src/: CMakeLists.txt  IObserver.h  ISubject.h  Item.cpp  Item.h  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h
